--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "HelloWorldNodeApp",
+	"name": "BreastCancerPredictionNodeApp",
 	"version": "0.0.1",
     "private": true,
 	"scripts": {
@@ -7,7 +7,12 @@
 	},
 	"dependencies": {
 		"express": "4.13.x",
-		"cfenv": "1.0.x"
+		"cfenv": "1.0.x",
+	    "body-parser": "1.13.x",
+		"request": "2.83.x",
+		"request-promise": "4.2.x",
+		"ejs": "2.5.x",
+		"btoa": "1.2.x"
 	},
 	"repository": {},
 	"engines": {
